--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "tiempoextrabackend",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0"
   },
   "scripts": {
     "start": "node server.js",
